Fix layout issue with services icons

--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,7 @@ footer, .centered-info, .stats, .service-list {
 }
 
 .service-list {
+    align-items: baseline;
     justify-content: space-around;
 }
 
